section-9-CFN_Init-EC2_UserData/1-ec2-user-data.yaml
Parameters:
    KeyName:
        Description: Name of an existing EC2 key pair for SSH access to the EC2 instance.
        Type: AWS::EC2::KeyPair::KeyName
    SSHLocation:
        Description: The IP address range that can be used to SSH to the EC2 instances
        Type: String
        MinLength: "9"
        MaxLength: "18"
        Default: 0.0.0.0/0
        AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
        ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

Resources:
    WebServer:
        Type: AWS::EC2::Instance
        Properties:
            ImageId: ami-a4c7edb2
            InstanceType: t2.micro
            KeyName: !Ref KeyName
            SecurityGroups:
                - !Ref WebServerSecurityGroup
            UserData:
                Fn::Base64: |
                    #!/bin/bash
                    yum update -y
                    yum install -y httpd24 php56 mysql55-server php56-mysqlnd
                    service httpd start
                    chkconfig httpd on
                    groupadd www
                    usermod -a -G www ec2-user
                    chown -R root:www /var/www
                    chmod 2775 /var/www
                    find /var/www -type d -exec chmod 2775 {} +
                    find /var/www -type f -exec chmod 0664 {} +
                    echo "<?php phpinfo(); ?>" > /var/www/html/phpinfo.php

    WebServerSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: "Enable HTTP access via port 80 + SSH access"
            SecurityGroupIngress:
                - CidrIp: 0.0.0.0/0
                  FromPort: "80"
                  IpProtocol: tcp
                  ToPort: "80"
                - CidrIp: !Ref SSHLocation
                  FromPort: "22"
                  IpProtocol: tcp
                  ToPort: "22"
